# nasa-promise

./: .gitignore  RANDOM_FOREST_README.md  README.md  Team Notebook.ipynb  kc2_blind_predictions.csv  kc2_blind_predictions_rf.csv  pipeline_overview.drawio  predictions_TEAMNAME.csv  predictions_TEAMNAME_v2.csv  pyproject.toml  random_forest_defect_prediction.ipynb  xgboost_kfold_defect_prediction.ipynb
datasets/__MACOSX/: ._datasets
datasets/__MACOSX/datasets/: ._cm1.csv  ._jm1.csv  ._kc1.csv  ._pc1.csv
src/cassino_ml/: __init__.py
test-blind/__MACOSX/test-blind/: ._kc2_test_blind.csv
test-blind/test-blind/: kc2_test_blind.csv
