[project]
name = "cassino-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Paul", email = "paul@pabr.de" }
]
requires-python = ">=3.14"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"
